# saucedemo-playwright-tests

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
config/: settings.py
pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_step_one_page.py  checkout_step_two_page.py  inventory_page.py  login_page.py  product_detail_page.py
test_data/: users.json
tests/: conftest.py  test_cart.py  test_checkout.py  test_inventory.py  test_login.py  test_navigation.py  test_product_detail.py
utils/: helpers.py
