[project]
name = "saucedemo-playwright-tests"
version = "1.0.0"
description = "Production-grade Playwright + pytest automation framework for SauceDemo (Swag Labs)"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pages", "config", "utils"]
